# The15thSin.github.io

./: .gitignore  CNAME  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  main.yml
src/: App.jsx  styles.css
src/app/: main.py
